# aoc23

./: Cargo.toml  LICENSE  flake.nix
benches/: 1a.rs
src/: day.rs  day_info.rs  days.rs  main.rs
src/days/: day07.rs  day21.rs  day_info.rs
src/days/day01/: a.rs  b.rs  utils.rs
src/days/day02/: a.rs  b.rs  utils.rs
src/days/day03/: a.rs  b.rs  utils.rs
src/days/day04/: a.rs  b.rs  utils.rs
src/days/day05/: a.rs  b.rs  utils.rs
src/days/day06/: a.rs  b.rs  utils.rs
src/days/day07/: a.rs  b.rs  utils.rs
src/days/day08/: a.rs  b.rs  utils.rs
src/days/day09/: a.rs  b.rs  utils.rs
src/days/day10/: a.rs  b.rs  utils.rs
src/days/day11/: a.rs  b.rs  utils.rs
src/days/day12/: a.rs  b.rs  utils.rs
src/days/day13/: a.rs  b.rs  utils.rs
src/days/day18/: b.rs
src/days/day19/: a.rs
src/days/day21/: b.rs
src/days/day22/: utils.rs
src/days/day23/: a.rs
