[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
by_address = "1.1.0"
clap = { version = "4.4.10", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.2"
thiserror = "1.0.50"
